--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,89 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+section:nth-of-type(1) {
+  display: flex;
+  flex-direction: column;
+  height: 150px;
+  align-items: center;
   text-align: center;
-}
+  gap: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+  h1 {
+    font-size: 130%;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    font-weight: 450;
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+  h2 {
+    font-weight: 450;
+    font-size: 120%;
+
+    span {
+      color: var(--groene-kleur);
+    }
   }
 }
 
-.card {
-  padding: 2em;
-}
+section:nth-of-type(2) {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 
-.read-the-docs {
-  color: #888;
+  article {
+    height: max-content;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    width: 90%;
+    background-color: white;
+
+    h2 {
+      font-size: 100%;
+      font-weight: 600;
+      font-size: 100%;
+      font-weight: 600;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding-bottom: 20px;
+
+      button {
+        display: flex;
+      }
+    }
+
+    button {
+      background: none;
+      border: none;
+    }
+
+    ul {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+
+      li {
+        width: 100%;
+        align-items: center;
+        padding: 13px 10px;
+        background-color: rgba(235, 203, 174, 0.7);
+        display: flex;
+        justify-content: space-between;
+
+        input[type="checkbox"] {
+          width: 20px;
+          aspect-ratio: 1 / 1;
+        }
+
+        button {
+          display: flex;
+        }
+      }
+    }
+  }
 }
