--- a/src/styles/NewWeekForm.css
+++ b/src/styles/NewWeekForm.css
@@ -1,10 +1,33 @@
 section:nth-of-type(3) {
   min-height: 80px;
   padding: 20px 0;
+}
 
-  button {
-    font-size: 100%;
-    display: flex;
-    gap: 10px;
-  }
+section:nth-of-type(3) button {
+  font-size: 100%;
+  display: flex;
+  gap: 10px;
+}
+
+.new-week-form {
+  display: flex;
+}
+
+.calendar-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7); /* black overlay with transparency */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999; /* on top of everything */
+}
+
+.calendar-modal {
+  background: white;
+  padding: 20px;
+  border-radius: 10px;
 }
